hide promo__image on small screens, fixed color burger icon in promo page, fixed logo to be centered in sign in page on mobile screen.

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -15,7 +15,7 @@
 }
 
 .header_promo .navigation__link-profile {
-color: #000;
+  color: #000;
 }
 .header_promo .navigation__link_mobile {
   color: #000;
@@ -34,7 +34,7 @@ color: #000;
 }
 
 .navigation__link-profile {
-  color:#000;
+  color: #000;
   margin-left: 50px;
   padding: 8px 20px;
   background-color: #f9f9f9;
@@ -66,7 +66,6 @@ color: #000;
 .navigation__menu-btn {
   width: 44px;
   height: 44px;
-  background-image: url("../../images/burgermenu.svg");
   background-repeat: no-repeat;
   border: 0;
   background-color: transparent;
@@ -83,7 +82,13 @@ color: #000;
 .navigation__menu-btn_enabled {
   display: block;
 }
+.header .navigation__menu-btn_enabled {
+  background-image: url("../../images/burger-black.svg");
+}
 
+.header_promo .navigation__menu-btn_enabled {
+  background-image: url("../../images/burgermenu.svg");
+}
 .navigation__close-btn {
   width: 22px;
   height: 22px;
