--- a/src/components/SignForm/SignForm.css
+++ b/src/components/SignForm/SignForm.css
@@ -209,7 +209,7 @@
   }
 
   .logo_sign {
-    align-self: center;
+    width: 100%;
   }
 
   .signForm__title {
